--- a/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
@@ -7,7 +7,9 @@
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")*@
     <link href="~/css/style-starter.css" rel="stylesheet" />
-    <link href="~/css/icon_style.css" rel="stylesheet" />
+    <link href="~/css/vendor.css" rel="stylesheet" />
+    <link href="~/css/header.css" rel="stylesheet" />
+
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <a href="~/fonts/fontawesome-webfont.eot" rel="stylesheet"></a>
@@ -26,7 +28,7 @@
 
 </head>
 <body>
-    <section class=" w3l-header-4">
+    <section class="w3l-header-4">
         <!--header-->
         <header id="site-header">
             <div class="container">
