--- a/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/css/style-starter.css" rel="stylesheet" />
     <link href="~/css/vendor.css" rel="stylesheet" />
     <link href="~/css/header.css" rel="stylesheet" />
+    <link href="~/css/Service.css" rel="stylesheet" />
 
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
