--- a/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/css/vendor.css" rel="stylesheet" />
     <link href="~/css/header.css" rel="stylesheet" />
     <link href="~/css/Service.css" rel="stylesheet" />
+    <link href="~/css/about.css" rel="stylesheet" />
 
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
@@ -18,6 +19,7 @@
     <a href="~/fonts/fontawesome-webfont.woff" rel="stylesheet"></a>
     <a href="~/fonts/fontawesome-webfont.woff2" rel="stylesheet"></a>
     <a href="~/fonts/FontAwesome.otf" rel="stylesheet"></a>
+
     <script src="~/js/all.js"></script>
     <script src="~/js/app.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
